@@ -36,17 +36,23 @@ persistentagents=yes
 ;
 ;autologoffunavail=yes
 ;
-; Define ackcall to require an acknowledgement by '#' when
+; Define ackcall to require a DTMF acknowledgement when
 ; an agent logs in using agentcallbacklogin.  Default is "no".
 ; Can also be set to "always", which will also require AgentLogin
-; agents to acknowledge calls by pressing '#'.
+; agents to acknowledge calls. Use the acceptdtmf option to 
+; configure what DTMF key press should be used to acknowledge the
+; call. The default is '#'.
 ;
 ;ackcall=no
+;acceptdtmf=#
 ;
-; Define endcall to allow an agent to hangup a call by '*'.
-; Default is "yes". Set this to "no" to ignore '*'. 
+; Define endcall to allow an agent to hangup a call with a
+; DTMF keypress. Default is "yes". Use the enddtmf option to
+; configure which DTMF key will end a call. The default is
+; '*'.
 ;
 ;endcall=yes
+;enddtmf=*
 ;
 ; Define wrapuptime.  This is the minimum amount of time when
 ; after disconnecting before the caller can receive a new call
